# prompterator

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pr.yml
.streamlit/: config.toml
prompterator/: constants.py  main.py  model_specific_utils.py  models.py  postprocess_output.py  utils.py
prompterator/custom_components/custom_component_template/: __init__.py
prompterator/custom_components/custom_component_template/frontend/: package-lock.json  package.json
prompterator/custom_components/custom_component_template/frontend/src/: RateButtons.tsx  index.tsx
prompterator/models/: bedrock_models.py  cohere_models.py  google_models.py  hf_models.py  openai_models.py
